# annam2.0

./: .env.example  .gitignore  ACTIVE_RADIO_BUTTON_IMPLEMENTATION.md  AGE_FIELD_IMPLEMENTATION.md  DATE_DISPLAY_IMPLEMENTATION.md  DISCHARGE_SUMMARY_ENHANCEMENT_SUMMARY.md  DOCTOR_DROPDOWN_BUG_FIX.md  DOCTOR_DROPDOWN_ENHANCEMENT.md  DOCTOR_DROPDOWN_TYPE_FIX.md  DOCTOR_NAME_EXTRACTION_FIX.md  IP_BILLING_BUTTON_REMOVAL.md  OP_BILLING_ENHANCEMENTS_IMPLEMENTATION.md  PATIENT_AGE_IN_BILLS_IMPLEMENTATION.md  PATIENT_HISTORY_DATE_FILTERS_IMPLEMENTATION.md  PATIENT_HISTORY_IMPLEMENTATION.md  README.md  TYPESCRIPT_ERRORS_FIX_SUMMARY.md  TYPESCRIPT_ERROR_FIX_SUMMARY.md  apply_billing_fix.sh  comprehensive_discharge_enhancement.sql  manual_add_discharge_fields.sql  next.config.ts  package-lock.json  package.json  tailwind.config.ts  test-service.js  test_age_api.js  test_age_calculation.js  test_age_field.js  test_age_in_bills.js  test_billing_features.js  test_complete_flow.js  test_complete_ui_flow.js  test_corrected_print_template.js  test_date_display.js  test_discharge_sections.js  test_discharge_summary_fix.js  test_frontend_request_debug.js  test_patient_history.js  test_patient_history_date_filters.js  (+11 more)
.agent/: DOCUMENT_INTEGRATION_COMPLETE.md  DOCUMENT_INTEGRATION_EXAMPLES.md  DOCUMENT_UPLOAD_GUIDE.md  REVISIT_ERROR_FIX.md  REVISIT_IMPLEMENTATION_SUMMARY.md  REVISIT_README.md  REVISIT_SIDEBAR_UPDATE.md  REVISIT_TECHNICAL_SPEC.md  REVISIT_TESTING_CHECKLIST.md  (+3 more)
pharmacy-desktop/src-tauri/: Cargo.toml  tauri.conf.json
pharmacy-desktop/src-tauri/src/: lib.rs  main.rs
(+678 files in other folders)
